--- a/packages/react-native-win32/package.json
+++ b/packages/react-native-win32/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.0.0",
+    "@jest/create-cache-key-function": "^26.5.0",
     "@react-native-community/cli": "^4.13.0",
     "@react-native-community/cli-platform-android": "^4.13.0",
     "@react-native-community/cli-platform-ios": "^4.13.0",
@@ -31,24 +32,22 @@
     "art": "^0.10.0",
     "base64-js": "^1.1.2",
     "event-target-shim": "^5.0.1",
-    "fbjs-scripts": "^1.1.0",
     "hermes-engine": "~0.7.0",
     "invariant": "^2.2.4",
     "jsc-android": "^245459.0.0",
-    "metro-babel-register": "0.63.0",
-    "metro-react-native-babel-transformer": "0.63.0",
-    "metro-runtime": "0.63.0",
-    "metro-source-map": "0.63.0",
+    "metro-babel-register": "0.64.0",
+    "metro-react-native-babel-transformer": "0.64.0",
+    "metro-runtime": "0.64.0",
+    "metro-source-map": "0.64.0",
     "nullthrows": "^1.1.1",
-    "pretty-format": "^26.0.1",
+    "pretty-format": "^26.5.2",
     "promise": "^8.0.3",
     "prop-types": "^15.7.2",
-    "qs": "^6.5.1",
     "react-clone-referenced-element": "^1.0.1",
     "react-devtools-core": "^4.6.0",
     "react-refresh": "^0.4.0",
     "regenerator-runtime": "^0.13.2",
-    "scheduler": "0.19.1",
+    "scheduler": "^0.20.1",
     "stacktrace-parser": "^0.1.3",
     "use-subscription": "^1.0.0",
     "whatwg-fetch": "^3.0.0",
@@ -63,20 +62,20 @@
     "@types/react": "16.9.0",
     "@types/react-native": "^0.63.18",
     "babel-eslint": "^10.1.0",
-    "eslint": "6.8.0",
-    "flow-bin": "^0.135.0",
+    "eslint": "7.12.0",
+    "flow-bin": "^0.138.0",
     "jscodeshift": "^0.11.0",
     "just-scripts": "^0.44.7",
     "prettier": "1.19.1",
-    "react": "16.13.1",
-    "react-native": "0.0.0-77f7658e4",
+    "react": "17.0.1",
+    "react-native": "0.0.0-19d4cc2d4",
     "react-native-platform-override": "^0.4.1",
-    "react-shallow-renderer": "^16.13.1",
+    "react-shallow-renderer": "16.14.1",
     "typescript": "^3.8.3"
   },
   "peerDependencies": {
-    "react": "16.13.1",
-    "react-native": "0.0.0-77f7658e4"
+    "react": "17.0.1",
+    "react-native": "0.0.0-19d4cc2d4"
   },
   "beachball": {
     "defaultNpmTag": "canary",
