--- a/vnext/PropertySheets/RequireSolution.targets
+++ b/vnext/PropertySheets/RequireSolution.targets
@@ -7,9 +7,11 @@
 
   <Target Name="RequireSolutionTargets" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
-      <ErrorText>The property SolutionDir is blank. This project requires being built via a valid solution file.</ErrorText>
+      <ErrorText>The property {0} is not defined. This project requires being built via a valid solution file.</ErrorText>
     </PropertyGroup>
-    <Error Condition="'$(SolutionDir)' == ''" Text="$(ErrorText)" />
+    <Error Condition="'$(SolutionPath)' == '' OR '$(SolutionPath)' == '*Undefined*'" Text="$([System.String]::Format('$(ErrorText)', 'SolutionPath'))" />
+    <Error Condition="'$(SolutionDir)' == '' OR '$(SolutionDir)' == '*Undefined*'" Text="$([System.String]::Format('$(ErrorText)', 'SolutionDir'))" />
+    <Error Condition="'$(SolutionFileName)' == '' OR '$(SolutionFileName)' == '*Undefined*'" Text="$([System.String]::Format('$(ErrorText)', 'SolutionFileName'))" />
   </Target>
 
 </Project>
