--- a/packages/@rnw-scripts/babel-node-config/package.json
+++ b/packages/@rnw-scripts/babel-node-config/package.json
@@ -14,5 +14,6 @@
     "@babel/core": "^7.8.0",
     "@babel/preset-env": "^7.8.0",
     "@babel/preset-typescript": "^7.8.0"
-  }
+  },
+  "private": true
 }
