--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "lage build -- --color",
     "lint": "lage lint --verbose -- --color",
     "lint:fix": "lage lint:fix -- --color",
-    "change": "beachball change",
+    "change": "beachball change --branch 0.64-stable",
     "clean": "lage clean -- --color",
     "format": "format-files -i -style=file -assume-filename=../.clang-format",
     "format:verify": "format-files -i -style=file -assume-filename=../.clang-format -verify",
