--- a/packages/react-native-win32-tester/package.json
+++ b/packages/react-native-win32-tester/package.json
@@ -14,11 +14,11 @@
     "@react-native/tester": "0.0.1"
   },
   "peerDependencies": {
-    "@office-iss/react-native-win32": "^0.0.0-canary.65",
+    "@office-iss/react-native-win32": "0.64.0-preview.0",
     "react-native": "0.0.0-19d4cc2d4"
   },
   "devDependencies": {
-    "@office-iss/react-native-win32": "^0.0.0-canary.65",
+    "@office-iss/react-native-win32": "0.64.0-preview.0",
     "@rnw-scripts/eslint-config": "0.1.6",
     "@rnw-scripts/ts-config": "0.1.0",
     "eslint": "7.12.0",
