--- a/packages/E2ETest/package.json
+++ b/packages/E2ETest/package.json
@@ -22,7 +22,7 @@
     "@react-native-windows/tester": "0.0.1",
     "prompt-sync": "^4.2.0",
     "react": "17.0.1",
-    "react-native": "0.0.0-19d4cc2d4",
+    "react-native": "0.64.0-rc.1",
     "react-native-windows": "0.64.0-preview.0"
   },
   "devDependencies": {
