--- a/packages/microsoft-reactnative-sampleapps/package.json
+++ b/packages/microsoft-reactnative-sampleapps/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "react": "17.0.1",
-    "react-native": "0.0.0-19d4cc2d4",
+    "react-native": "0.64.0-rc.1",
     "react-native-windows": "0.64.0-preview.0"
   },
   "devDependencies": {
