--- a/packages/react-native-win32-tester/package.json
+++ b/packages/react-native-win32-tester/package.json
@@ -15,7 +15,7 @@
   },
   "peerDependencies": {
     "@office-iss/react-native-win32": "0.64.0-preview.0",
-    "react-native": "0.0.0-19d4cc2d4"
+    "react-native": "0.64.0-rc.1"
   },
   "devDependencies": {
     "@office-iss/react-native-win32": "0.64.0-preview.0",
@@ -23,7 +23,7 @@
     "@rnw-scripts/ts-config": "0.1.0",
     "eslint": "7.12.0",
     "just-scripts": "^0.44.7",
-    "react-native": "0.0.0-19d4cc2d4",
+    "react-native": "0.64.0-rc.1",
     "react-native-platform-override": "^0.4.3",
     "typescript": "^3.8.3"
   }
