--- a/packages/react-native-win32/package.json
+++ b/packages/react-native-win32/package.json
@@ -21,9 +21,9 @@
   "dependencies": {
     "@babel/runtime": "^7.0.0",
     "@jest/create-cache-key-function": "^26.5.0",
-    "@react-native-community/cli": "^4.13.0",
-    "@react-native-community/cli-platform-android": "^4.13.0",
-    "@react-native-community/cli-platform-ios": "^4.13.0",
+    "@react-native-community/cli": "^5.0.1-alpha.0",
+    "@react-native-community/cli-platform-android": "^5.0.1-alpha.0",
+    "@react-native-community/cli-platform-ios": "^5.0.1-alpha.0",
     "@react-native/assets": "1.0.0",
     "@react-native/normalize-color": "1.0.0",
     "@react-native/polyfills": "1.0.0",
@@ -48,6 +48,7 @@
     "react-refresh": "^0.4.0",
     "regenerator-runtime": "^0.13.2",
     "scheduler": "^0.20.1",
+    "shelljs": "^0.8.4",
     "stacktrace-parser": "^0.1.3",
     "use-subscription": "^1.0.0",
     "whatwg-fetch": "^3.0.0",
@@ -63,19 +64,19 @@
     "@types/react-native": "^0.63.18",
     "babel-eslint": "^10.1.0",
     "eslint": "7.12.0",
-    "flow-bin": "^0.138.0",
+    "flow-bin": "^0.137.0",
     "jscodeshift": "^0.11.0",
     "just-scripts": "^0.44.7",
     "prettier": "1.19.1",
     "react": "17.0.1",
-    "react-native": "0.0.0-19d4cc2d4",
+    "react-native": "0.64.0-rc.1",
     "react-native-platform-override": "^0.4.3",
     "react-shallow-renderer": "16.14.1",
     "typescript": "^3.8.3"
   },
   "peerDependencies": {
     "react": "17.0.1",
-    "react-native": "0.0.0-19d4cc2d4"
+    "react-native": "^0.64.0-rc.1"
   },
   "beachball": {
     "defaultNpmTag": "preview",
