--- a/vnext/package.json
+++ b/vnext/package.json
@@ -22,9 +22,9 @@
   "dependencies": {
     "@babel/runtime": "^7.0.0",
     "@jest/create-cache-key-function": "^26.5.0",
-    "@react-native-community/cli": "^4.13.0",
-    "@react-native-community/cli-platform-android": "^4.13.0",
-    "@react-native-community/cli-platform-ios": "^4.13.0",
+    "@react-native-community/cli": "^5.0.1-alpha.0",
+    "@react-native-community/cli-platform-android": "^5.0.1-alpha.0",
+    "@react-native-community/cli-platform-ios": "^5.0.1-alpha.0",
     "@react-native-windows/cli": "0.64.0-preview.0",
     "@react-native/assets": "1.0.0",
     "@react-native/normalize-color": "1.0.0",
@@ -48,6 +48,7 @@
     "react-refresh": "^0.4.0",
     "regenerator-runtime": "^0.13.2",
     "scheduler": "^0.20.1",
+    "shelljs": "^0.8.4",
     "stacktrace-parser": "^0.1.3",
     "use-subscription": "^1.0.0",
     "whatwg-fetch": "^3.0.0",
@@ -59,12 +60,12 @@
     "@types/react-native": "^0.63.18",
     "eslint": "7.12.0",
     "eslint-plugin-prettier": "2.6.2",
-    "flow-bin": "^0.138.0",
+    "flow-bin": "^0.137.0",
     "jscodeshift": "^0.11.0",
     "just-scripts": "^0.44.7",
     "prettier": "1.19.1",
     "react": "17.0.1",
-    "react-native": "0.0.0-19d4cc2d4",
+    "react-native": "0.64.0-rc.1",
     "react-native-platform-override": "^0.4.3",
     "react-native-windows-codegen": "0.1.10",
     "react-refresh": "^0.4.0",
@@ -73,7 +74,7 @@
   },
   "peerDependencies": {
     "react": "17.0.1",
-    "react-native": "0.0.0-19d4cc2d4"
+    "react-native": "^0.64.0-rc.1"
   },
   "beachball": {
     "defaultNpmTag": "preview",
