Disable desktop ITs

--- a/.ado/windows-vs-pr.yml
+++ b/.ado/windows-vs-pr.yml
@@ -454,12 +454,14 @@ jobs:
           targetType: filePath # filePath | inline
           filePath: $(Build.SourcesDirectory)\vnext\Scripts\Tfs\Start-TestServers.ps1
           arguments: -SourcesDirectory $(Build.SourcesDirectory)\vnext -Preload -SleepSeconds 120
+        condition: false # Desktop Integration Tests No Longer Bundling
 
       - task: PowerShell@2
         displayName: Check the metro bundle server
         inputs:
           targetType: 'inline'
           script: Invoke-WebRequest -UseBasicParsing -Uri "http://localhost:8081/IntegrationTests/IntegrationTestsApp.bundle?platform=windesktop&dev=true"
+        condition: false # Desktop Integration Tests No Longer Bundling
 
       - task: VSTest@2
         displayName: Run Desktop Integration Tests
@@ -475,8 +477,9 @@ jobs:
           collectDumpOn: onAbortOnly
           vsTestVersion: latest
           otherConsoleOptions: '/blame -- RunConfiguration.TestSessionTimeout=300000'
+        condition: false # Desktop Integration Tests No Longer Bundling
         # Suspected debug assert in TestRunner hanging tests randomly. Run only on Release for now.
-        condition: and(succeeded(), ne(variables['BuildConfiguration'], 'Debug'))
+        # condition: and(succeeded(), ne(variables['BuildConfiguration'], 'Debug'))
 
       - template: templates/stop-packagers.yml
 
