--- a/packages/E2ETest/package.json
+++ b/packages/E2ETest/package.json
@@ -34,14 +34,12 @@
     "@types/node": "^10.14.8",
     "@types/react": "16.9.0",
     "@types/react-native": "^0.63.18",
-    "@wdio/appium-service": "5.12.1",
     "@wdio/cli": "5.12.1",
     "@wdio/dot-reporter": "5.12.1",
     "@wdio/jasmine-framework": "5.12.1",
     "@wdio/junit-reporter": "5.12.1",
     "@wdio/local-runner": "5.12.1",
     "@wdio/sync": "5.12.1",
-    "appium": "1.14.1",
     "eslint": "7.12.0",
     "just-scripts": "^0.44.7",
     "metro-react-native-babel-preset": "^0.56.0",
@@ -51,7 +49,7 @@
     "ts-node": "^7.0.1",
     "tsconfig-paths": "^3.8.0",
     "typescript": "^3.8.3",
-    "webdriver": "git+https://github.com/react-native-windows/webdriver.git",
-    "webdriverio": "5.12.1"
+    "webdriverio": "5.12.1",
+    "wdio-winappdriver-service": "0.1.0"
   }
 }
