--- a/.ado/templates/e2e-test-job.yml
+++ b/.ado/templates/e2e-test-job.yml
@@ -41,13 +41,6 @@ jobs:
           workingDirectory: $(Build.SourcesDirectory)
         condition: false # Must be manually enabled, since it causes a 5x perf reduction that causes test instability
 
-      # See Issue 6393 for details
-      - powershell: |
-          Invoke-WebRequest https://github.com/microsoft/WinAppDriver/releases/download/v1.1/WindowsApplicationDriver.msi -OutFile $(Agent.TempDirectory)\WinAppDriver.msi
-          Start-Process msiexec -ArgumentList "/quiet","/x","{087BBF93-D9E3-4D27-BDBE-9C702E0066FC}" -Verb runAs -Wait
-          Start-Process msiexec -ArgumentList "/quiet","/i","$(Agent.TempDirectory)\WinAppDriver.msi" -Verb runAs -Wait
-        displayName: Replace WinAppDriver 1.2.1 with WinAppDriver 1.1
-
       - task: CmdLine@2
         displayName: run-windows
         inputs:
@@ -125,10 +118,10 @@ jobs:
         condition: succeededOrFailed()
 
       - task: PowerShell@2
-        displayName: "Show appium log"
+        displayName: "Show winappdriver log"
         inputs:
           targetType: "inline"
-          script: "Get-Content packages/E2ETest/reports/appium.txt | foreach {Write-Output $_}"
+          script: "Get-Content packages/E2ETest/reports/winappdriver.txt | foreach {Write-Output $_}"
         condition: failed()
 
       - task: PowerShell@2
