--- a/packages/E2ETest/package.json
+++ b/packages/E2ETest/package.json
@@ -34,12 +34,12 @@
     "@types/node": "^10.14.8",
     "@types/react": "16.9.0",
     "@types/react-native": "^0.63.18",
-    "@wdio/cli": "5.12.1",
-    "@wdio/dot-reporter": "5.12.1",
-    "@wdio/jasmine-framework": "5.12.1",
-    "@wdio/junit-reporter": "5.12.1",
-    "@wdio/local-runner": "5.12.1",
-    "@wdio/sync": "5.12.1",
+    "@wdio/cli": "^6.9.0",
+    "@wdio/dot-reporter": "^6.8.1",
+    "@wdio/jasmine-framework": "^6.8.0",
+    "@wdio/junit-reporter": "^6.8.1",
+    "@wdio/local-runner": "^6.9.0",
+    "@wdio/sync": "^6.9.0",
     "eslint": "7.12.0",
     "just-scripts": "^0.44.7",
     "metro-react-native-babel-preset": "^0.56.0",
@@ -49,7 +49,7 @@
     "ts-node": "^7.0.1",
     "tsconfig-paths": "^3.8.0",
     "typescript": "^3.8.3",
-    "webdriverio": "5.12.1",
-    "wdio-winappdriver-service": "0.1.0"
+    "webdriverio": "^6.9.0",
+    "wdio-winappdriver-service": "^0.1.0"
   }
 }
