--- a/.ado/jobs/cli-init.yml
+++ b/.ado/jobs/cli-init.yml
@@ -235,7 +235,7 @@ jobs:
     displayName: Verify Cli
     dependsOn:
       - Setup
-      - Universal
+      - UniversalBuild
     condition: |
       and
       (
