--- a/.ado/windows-vs-pr.yml
+++ b/.ado/windows-vs-pr.yml
@@ -26,7 +26,7 @@ jobs:
 
   - template: jobs/universal.yml
     parameters:
-      buildEnvironment: PullRequest
+      buildEnvironment: Continuous
 
   # - template: jobs/desktop.yml
   #   parameters:
