--- a/.ado/templates/build-rnw.yml
+++ b/.ado/templates/build-rnw.yml
@@ -47,7 +47,7 @@ steps:
       platform: $(BuildPlatform)
       configuration: $(BuildConfiguration)
       clean: false # Optional
-      maximumCpuCount: false # Optional
+      maximumCpuCount: true # Optional
       restoreNugetPackages: false # Optional
       createLogFile: true
       logFileVerbosity: detailed
@@ -57,6 +57,7 @@ steps:
         /p:BaseIntDir=$(BaseIntDir)
         /p:PublishToolDuringBuild=true
         /p:EnableSourceLink=true
+        /p:UseMultiToolTask=true
         /bl:${{ parameters.BuildLogDirectory }}\MsBuild.binlog
         /flp1:errorsonly;logfile=${{ parameters.BuildLogDirectory }}\MsBuild.err
         /flp2:warningsonly;logfile=${{ parameters.BuildLogDirectory }}\MsBuild.wrn
