--- a/.ado/templates/prepare-env.yml
+++ b/.ado/templates/prepare-env.yml
@@ -25,12 +25,19 @@ steps:
 
   # The commit tag in the nuspec requires that we use at least nuget 5.8 (because things break with nuget versions before and Vs 16.8 or later)
   - task: NuGetToolInstaller@0
+    displayName: Installing NuGet
     inputs:
       versionSpec: ">=5.8.0"
 
   - task: NodeTool@0
+    displayName: Installing Node
     inputs:
       versionSpec: '14.x' 
+
+  - task: CmdLine@2
+    displayName: Installing Yarm
+    inputs:
+      script: npm install -g yarn
 
   - template: yarn-install.yml
 
